[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
  "pdbpp>=0.12.1"
]
test = [
  "pytest>=9.0.3"
]

[project]
name = "bisque"
dynamic = ["version"]
description = "Web scraping into structured Pydantic data models."
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
keywords = [
  "HTML",
  "XML",
  "parse",
  "soup",
  "pydantic"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries",
  'Framework :: Pydantic',
  'Framework :: Pydantic :: 2',
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: SGML",
  "Topic :: Text Processing :: Markup :: XML"
]
dependencies = [
  "pydantic>=2.1.1",
  "chinois>=0.2.2"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
html5lib = [
  "html5lib>=1.1"
]
lxml = [
  "lxml>=4.9.3"
]

[project.urls]
Homepage = "https://github.com/lmmx/bisque"
Repository = "https://github.com/lmmx/bisque.git"

[tool.ruff.lint]
ignore = [
  "E711",
  "E712",
  "E721",
  "E741",
  "F401", # medium
  "F811", # high
  "F821", # high
  "F841" # high
]
